ganti status profile

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         class="rounded-circle img-thumbnail"
       />
       <h1 class="display-4">Tullis Adrian Batista</h1>
-      <p class="lead">Teacher</p>
+      <p class="lead">Guru SMK Bina Kusuma 2</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
