--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <div class="container">
         <div class="row text-center mb-3">
           <div class="col">
-            <h2>My Projects</h2>
+            <h2>Projects Saya</h2>
           </div>
         </div>
         <div class="row justify-content-center">
